# assignmentOne

./: README.md
AssLion/: AssLion.exe.stackdump  CMakeLists.txt  ComparePoly.cpp  ComparePoly.h  MyPolygons.h  MyPolygons.tpp  data.txt  main.cpp  node (1).h  node (1).tpp  node.h  node.tpp  point.cpp  point.h  polygon.cpp  polygon.h
